force-app/main/default/objects/OrderItem/fields/AgrogalaxyComboDiscount__c.field-meta.xml
<CustomField>
    <fullName>AgrogalaxyComboDiscount__c</fullName>
    <label>Valor Desconto Combo Agrogalaxy</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>