force-app/main/default/objects/OrderItem/fields/AmountUsed__c.field-meta.xml
<CustomField>
    <fullName>AmountUsed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade Utilizada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>