force-app/main/default/objects/OrderItem/fields/BalanceValue__c.field-meta.xml
<CustomField>
    <fullName>BalanceValue__c</fullName>
    <formula>ItemBalance__c *  PracticedPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo em Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>