force-app/main/default/objects/OrderItem/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Corretagem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>