force-app/main/default/objects/OrderItem/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Classe/Categoria</label>
    <length>6</length>
    <type>Text</type>
</CustomField>