force-app/main/default/objects/OrderItem/fields/Client_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>Client_OrderItem__c</fullName>
    <label>Item do Pedido do Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>