force-app/main/default/objects/OrderItem/fields/ComboPromotion__c.field-meta.xml
<CustomField>
    <fullName>ComboPromotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combos e Promoções</label>
    <referenceTo>ComboPromotion__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>