force-app/main/default/objects/OrderItem/fields/ComissionValue__c.field-meta.xml
<CustomField>
    <fullName>ComissionValue__c</fullName>
    <label>Comissão em Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>