force-app/main/default/objects/OrderItem/fields/CommercialAdditionPercent__c.field-meta.xml
<CustomField>
    <fullName>CommercialAdditionPercent__c</fullName>
    <label>Percentual de Acréscimo - Comercial</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>