force-app/main/default/objects/OrderItem/fields/CommercialAdditionValue__c.field-meta.xml
<CustomField>
    <fullName>CommercialAdditionValue__c</fullName>
    <label>Valor de Acréscimo - Comercial</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>