force-app/main/default/objects/OrderItem/fields/CommercialMargin__c.field-meta.xml
<CustomField>
    <fullName>CommercialMargin__c</fullName>
    <label>Margem Comercial</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>