force-app/main/default/objects/OrderItem/fields/CommitteeTrigger__c.field-meta.xml
<CustomField>
    <fullName>CommitteeTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gatilho Comitê</label>
    <type>Checkbox</type>
</CustomField>