force-app/main/default/objects/OrderItem/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <label>Desconto em Valor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>