force-app/main/default/objects/OrderItem/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosagem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>