force-app/main/default/objects/OrderItem/fields/FinalTotalValue__c.field-meta.xml
<CustomField>
    <fullName>FinalTotalValue__c</fullName>
    <label>Valor Total Final</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>