force-app/main/default/objects/OrderItem/fields/FinancialAdditionPercent__c.field-meta.xml
<CustomField>
    <fullName>FinancialAdditionPercent__c</fullName>
    <label>Percentual de Acréscimo - Financeiro</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>