force-app/main/default/objects/OrderItem/fields/FinancialAdditionValue__c.field-meta.xml
<CustomField>
    <fullName>FinancialAdditionValue__c</fullName>
    <label>Valor de Acréscimo - Financeiro</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>