force-app/main/default/objects/OrderItem/fields/FinancialDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>FinancialDiscountPercent__c</fullName>
    <label>Percentual de Desconto - Financeiro</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>