force-app/main/default/objects/OrderItem/fields/FinancialDiscountValue__c.field-meta.xml
<CustomField>
    <fullName>FinancialDiscountValue__c</fullName>
    <label>Valor de Desconto - Financeiro</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>