force-app/main/default/objects/OrderItem/fields/IndividualQuotas__c.field-meta.xml
<CustomField>
    <fullName>IndividualQuotas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cota Individual</label>
    <referenceTo>IndividualQuotas__c</referenceTo>
    <relationshipLabel>Produto do Pedido</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>