force-app/main/default/objects/OrderItem/fields/IndustryComboDiscount__c.field-meta.xml
<CustomField>
    <fullName>IndustryComboDiscount__c</fullName>
    <label>Valor Desconto Combo Indústria</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>