force-app/main/default/objects/OrderItem/fields/InvoicedQuantity__c.field-meta.xml
<CustomField>
    <fullName>InvoicedQuantity__c</fullName>
    <label>Quantidade Faturada</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>