force-app/main/default/objects/OrderItem/fields/ItemBalance__c.field-meta.xml
<CustomField>
    <fullName>ItemBalance__c</fullName>
    <label>Saldo do Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>