force-app/main/default/objects/OrderItem/fields/ListCost__c.field-meta.xml
<CustomField>
    <fullName>ListCost__c</fullName>
    <label>Custo de Lista</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>