force-app/main/default/objects/OrderItem/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <label>Preço de Lista</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>