force-app/main/default/objects/OrderItem/fields/NumeroSap__c.field-meta.xml
<CustomField>
    <fullName>NumeroSap__c</fullName>
    <label>Número Sap</label>
    <length>3</length>
    <type>Text</type>
</CustomField>