force-app/main/default/objects/OrderItem/fields/PercentComission__c.field-meta.xml
<CustomField>
    <fullName>PercentComission__c</fullName>
    <label>Percentual de Comissão</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>