force-app/main/default/objects/OrderItem/fields/PracticedCost__c.field-meta.xml
<CustomField>
    <fullName>PracticedCost__c</fullName>
    <label>Custo Praticado</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>