force-app/main/default/objects/OrderItem/fields/PracticedPrice__c.field-meta.xml
<CustomField>
    <fullName>PracticedPrice__c</fullName>
    <label>Preço Praticado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>