force-app/main/default/objects/OrderItem/fields/PriceListCode__c.field-meta.xml
<CustomField>
    <fullName>PriceListCode__c</fullName>
    <label>Código SAP - Preço</label>
    <length>100</length>
    <type>Text</type>
</CustomField>