force-app/main/default/objects/OrderItem/fields/PTA__c.field-meta.xml
<CustomField>
    <fullName>PTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PTA</label>
    <type>Checkbox</type>
</CustomField>