force-app/main/default/objects/OrderItem/fields/PurchaseOrderNumberSAP__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderNumberSAP__c</fullName>
    <label>Número Pedido Compra SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>