force-app/main/default/objects/OrderItem/fields/QuantityConsumed__c.field-meta.xml
<CustomField>
    <fullName>QuantityConsumed__c</fullName>
    <formula>Quantity -  ItemBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Consumida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>