force-app/main/default/objects/OrderItem/fields/QuantityInvoiced__c.field-meta.xml
<CustomField>
    <fullName>QuantityInvoiced__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade Faturada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>