force-app/main/default/objects/OrderItem/fields/ReasonRefuse__c.field-meta.xml
<CustomField>
    <fullName>ReasonRefuse__c</fullName>
    <label>Motivo de Recusa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReasonRefuse</valueSetName>
    </valueSet>
</CustomField>