force-app/main/default/objects/OrderItem/fields/RoyaltyAmount__c.field-meta.xml
<CustomField>
    <fullName>RoyaltyAmount__c</fullName>
    <label>Valor de Royalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>