force-app/main/default/objects/OrderItem/fields/Sieve__c.field-meta.xml
<CustomField>
    <fullName>Sieve__c</fullName>
    <label>Peneira</label>
    <length>3</length>
    <type>Text</type>
</CustomField>