force-app/main/default/objects/OrderItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Faturado Parcialmente</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Crédito Liberado</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>