force-app/main/default/objects/OrderItem/fields/TotalPricePerBag__c.field-meta.xml
<CustomField>
    <fullName>TotalPricePerBag__c</fullName>
    <label>Preço total por saca</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>