force-app/main/default/objects/OrderItem/fields/TotalRoyaltyAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRoyaltyAmount__c</fullName>
    <label>Valor Total de Royalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>