force-app/main/default/objects/OrderItem/fields/TotalTSIAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTSIAmount__c</fullName>
    <label>Valor Total TSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>