force-app/main/default/objects/OrderItem/fields/TSIValue__c.field-meta.xml
<CustomField>
    <fullName>TSIValue__c</fullName>
    <label>Valor de TSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>