force-app/main/default/objects/OrderItem/fields/UnitMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitMeasure__c</fullName>
    <label>Unidade de Medida</label>
    <length>100</length>
    <type>Text</type>
</CustomField>