force-app/main/default/objects/OrderItem/fields/UnitPricePerBag__c.field-meta.xml
<CustomField>
    <fullName>UnitPricePerBag__c</fullName>
    <label>Preço unitário por saca</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>