force-app/main/default/objects/OrderItem/fields/ValorFaturado__c.field-meta.xml
<CustomField>
    <fullName>ValorFaturado__c</fullName>
    <label>Valor Faturado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>